[gd_scene load_steps=9 format=3 uid="uid://dcnaextl0r0j3"]

[ext_resource type="Script" path="res://scripts/screens/main_menu.gd" id="1_o648f"]
[ext_resource type="Texture2D" uid="uid://08ciy8ubik8d" path="res://art/logos/astrofix.png" id="1_qkq8o"]
[ext_resource type="Theme" uid="uid://qxeek2x1twmy" path="res://scenes/themes/main_theme.tres" id="1_vo81b"]
[ext_resource type="Texture2D" uid="uid://qo1np2gqp70s" path="res://art/objects/star.png" id="3_fet22"]

[sub_resource type="Gradient" id="Gradient_s2tqw"]
colors = PackedColorArray(0, 0, 0, 0.196078, 1, 1, 1, 0.0588235)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_sx2k3"]
gradient = SubResource("Gradient_s2tqw")
fill = 1
fill_from = Vector2(0.50237, 0.508057)
fill_to = Vector2(1, 1)

[sub_resource type="Curve" id="Curve_jfvvg"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.749377, 1), 0.0, 0.0, 0, 0, Vector2(1, 0.506883), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="Gradient" id="Gradient_xkkbj"]
offsets = PackedFloat32Array(0, 0.253623, 0.65942, 0.927536)
colors = PackedColorArray(0, 0, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 0, 0, 1)

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_vo81b")
script = ExtResource("1_o648f")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="Overlay" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_sx2k3")

[node name="GPUParticles2D" type="CPUParticles2D" parent="."]
texture_filter = 1
position = Vector2(160, 90)
amount = 128
lifetime = 5.0
fixed_fps = 30
draw_order = 1
texture = ExtResource("3_fet22")
emission_shape = 3
emission_rect_extents = Vector2(320, 180)
spread = 0.0
gravity = Vector2(0, 0)
radial_accel_min = -5.0
radial_accel_max = -1.0
scale_amount_min = 0.3
scale_amount_max = 0.5
scale_amount_curve = SubResource("Curve_jfvvg")
color_ramp = SubResource("Gradient_xkkbj")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -48.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_qkq8o")
expand_mode = 2
stretch_mode = 5

[node name="Home" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -39.0
offset_top = -85.0
offset_right = 39.0
offset_bottom = -11.0
grow_horizontal = 2
grow_vertical = 0
focus_mode = 2
alignment = 1

[node name="Start" type="Button" parent="Home"]
layout_mode = 2
theme_type_variation = &"FlatButton"
text = "Start Game"

[node name="Settings" type="Button" parent="Home"]
layout_mode = 2
theme_type_variation = &"FlatButton"
text = "Settings"

[node name="Quit" type="Button" parent="Home"]
layout_mode = 2
theme_type_variation = &"FlatButton"
text = "Exit"

[node name="Settings" type="VBoxContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -42.0
offset_top = -70.0
offset_right = 42.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0
alignment = 1

[node name="Master" type="HBoxContainer" parent="Settings"]
layout_mode = 2

[node name="Label" type="Label" parent="Settings/Master"]
layout_mode = 2
text = "Master"

[node name="MasterSlider" type="HSlider" parent="Settings/Master"]
layout_mode = 2
size_flags_horizontal = 3
step = 10.0
value = 100.0

[node name="Music" type="HBoxContainer" parent="Settings"]
layout_mode = 2

[node name="Label" type="Label" parent="Settings/Music"]
layout_mode = 2
text = "Music"

[node name="MusicSlider" type="HSlider" parent="Settings/Music"]
layout_mode = 2
size_flags_horizontal = 3
step = 10.0
value = 100.0

[node name="Back" type="Button" parent="Settings"]
layout_mode = 2
theme_type_variation = &"FlatButton"
text = "Back
"

[connection signal="pressed" from="Home/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="Home/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="Home/Quit" to="." method="_on_quit_pressed"]
[connection signal="value_changed" from="Settings/Master/MasterSlider" to="." method="_on_master_slider_changed"]
[connection signal="value_changed" from="Settings/Music/MusicSlider" to="." method="_on_music_slider_changed"]
[connection signal="pressed" from="Settings/Back" to="." method="_on_back_pressed"]
